--- a/AppWarpChatDemo/AppWarpChatDemo/Base.lproj/Main_iPhone.storyboard
+++ b/AppWarpChatDemo/AppWarpChatDemo/Base.lproj/Main_iPhone.storyboard
@@ -1,11 +1,15 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="dej-hC-1Hf">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="dej-hC-1Hf">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <deployment defaultVersion="1536" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Sample View Controller - Connect-->
+        <!--Connect-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController title="Connect" id="vXZ-lx-hvc" customClass="SampleViewController" sceneMemberID="viewController">
@@ -14,7 +18,7 @@
                         <viewControllerLayoutGuide type="bottom" id="LB5-Tf-0qN"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="User Name:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t4b-rW-9Ek">
@@ -27,7 +31,7 @@
                                 <rect key="frame" x="91" y="198" width="139" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Connect">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="joinAction:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="KM4-g8-HLP"/>
@@ -58,22 +62,22 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </view>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="tSP-x9-vmf" userLabel="Room List Table View">
                                         <rect key="frame" x="5" y="46" width="260" height="233"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <prototypes>
                                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="SR_List_Cell" textLabel="glu-Wq-IDM" style="IBUITableViewCellStyleDefault" id="lEU-9e-crs" userLabel="Room cell Table View Cell">
                                                 <rect key="frame" x="0.0" y="22" width="260" height="44"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lEU-9e-crs" id="sSf-RP-Ciw">
-                                                    <rect key="frame" x="0.0" y="0.0" width="227" height="43"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="227" height="43.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="glu-Wq-IDM">
-                                                            <rect key="frame" x="15" y="0.0" width="210" height="43"/>
+                                                            <rect key="frame" x="15" y="0.0" width="210" height="43.5"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -99,8 +103,6 @@
                     </view>
                     <navigationItem key="navigationItem" title="Connect" id="Hr7-7f-IQt"/>
                     <nil key="simulatedStatusBarMetrics"/>
-                    <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="connectButton" destination="wvh-QH-HDp" id="GRv-38-7Pg"/>
                         <outlet property="roomSelectionView" destination="f6M-ku-aFM" id="knn-Hj-Ivu"/>
@@ -115,7 +117,7 @@
             </objects>
             <point key="canvasLocation" x="948" y="85"/>
         </scene>
-        <!--Chat View Controller - Chat Room-->
+        <!--Chat Room-->
         <scene sceneID="cBd-BB-bg9">
             <objects>
                 <viewController id="hma-8v-yfx" customClass="ChatViewController" sceneMemberID="viewController">
@@ -124,30 +126,29 @@
                         <viewControllerLayoutGuide type="bottom" id="Thx-RN-En8"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="TxV-M7-fDM">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="voR-jb-KXW">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="503"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="0.0" y="0.0" width="369" height="602"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SR_Chat_Cell" textLabel="WaR-LJ-PfF" detailTextLabel="BIg-Ac-WgF" style="IBUITableViewCellStyleSubtitle" id="neI-9K-QLC">
-                                        <rect key="frame" x="0.0" y="66" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="22" width="369" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="neI-9K-QLC" id="ghk-k3-scB">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="369" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="WaR-LJ-PfF">
-                                                    <rect key="frame" x="15" y="3" width="34" height="22"/>
+                                                    <rect key="frame" x="15" y="4" width="35" height="21.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Detail" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="BIg-Ac-WgF">
-                                                    <rect key="frame" x="15" y="25" width="32" height="15"/>
+                                                    <rect key="frame" x="15" y="25.5" width="33" height="14.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -163,9 +164,11 @@
                                 </connections>
                             </tableView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter text here" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="OMr-DL-zzV">
-                                <rect key="frame" x="10" y="520" width="300" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="11" y="619" width="353" height="30"/>
+                                <color key="backgroundColor" red="0.66666668653488159" green="0.66666668653488159" blue="0.66666668653488159" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="353" id="g3b-9D-BuQ"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="yes" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                 <connections>
@@ -173,14 +176,13 @@
                                 </connections>
                             </textField>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="Thx-RN-En8" firstAttribute="top" secondItem="OMr-DL-zzV" secondAttribute="bottom" constant="18" id="4uV-ji-uqr"/>
                             <constraint firstItem="voR-jb-KXW" firstAttribute="leading" secondItem="TxV-M7-fDM" secondAttribute="leading" id="DOH-5Y-NAM"/>
-                            <constraint firstItem="voR-jb-KXW" firstAttribute="centerX" secondItem="OMr-DL-zzV" secondAttribute="centerX" id="DpG-YT-taB"/>
-                            <constraint firstItem="OMr-DL-zzV" firstAttribute="leading" secondItem="TxV-M7-fDM" secondAttribute="leading" constant="10" id="S0e-6Y-ceb"/>
-                            <constraint firstItem="OMr-DL-zzV" firstAttribute="top" secondItem="voR-jb-KXW" secondAttribute="bottom" constant="17" id="Uu8-qJ-eWQ"/>
-                            <constraint firstItem="Thx-RN-En8" firstAttribute="top" secondItem="OMr-DL-zzV" secondAttribute="bottom" constant="18" id="c6h-tz-l2M"/>
-                            <constraint firstAttribute="trailing" secondItem="OMr-DL-zzV" secondAttribute="trailing" constant="10" id="nOP-ul-eSe"/>
+                            <constraint firstItem="voR-jb-KXW" firstAttribute="centerX" secondItem="OMr-DL-zzV" secondAttribute="centerX" constant="-3" id="DpG-YT-taB"/>
+                            <constraint firstItem="OMr-DL-zzV" firstAttribute="centerX" secondItem="TxV-M7-fDM" secondAttribute="centerX" id="UD8-zc-Pv9"/>
+                            <constraint firstItem="OMr-DL-zzV" firstAttribute="top" secondItem="voR-jb-KXW" secondAttribute="bottom" constant="17" id="pZv-SC-kLI"/>
                             <constraint firstItem="voR-jb-KXW" firstAttribute="top" secondItem="TxV-M7-fDM" secondAttribute="top" id="u9U-r7-EI3"/>
                         </constraints>
                     </view>
@@ -193,7 +195,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ltD-I0-3nJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1402" y="85"/>
+            <point key="canvasLocation" x="1401.5" y="84.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="TbB-bA-fxa">
@@ -202,7 +204,7 @@
                     <toolbarItems/>
                     <nil key="simulatedStatusBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="mjj-iI-wQV">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -215,9 +217,4 @@
             <point key="canvasLocation" x="491" y="85"/>
         </scene>
     </scenes>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
 </document>
